         libspectrum_zlib_inflate() and libspectrum_zlib_compress() (patch
         #2927624) (Gergely Szasz and Fred).
20100221 dll.c: correct switch variable name (part of patch #2533274) (Simon
         Owen).
20100221 warajevo_read.c: don't declare variables mid-block for C89 (part of
         patch #2533274) (Simon Owen).
20100221 myglib/ghash.c: should use libspectrum_dword instead of uint32_t (part
         of patch #2533274) (Simon Owen).
20100221 generate.pl.in,libspectrum.h.in,make-perl.c: WIN32_DLL
         [__declspec(dllexport)] should be before the return type in
         declarations, rather than between return type and function name (part
         of patch #2533274) (Simon Owen).
20100221 internals.h: define __func__ in MSVC (part of patch #2533274) (Simon
         Owen).
20100221 internals.h: define M_LN2 for use with non C99 math.h (part of patch
         #2533274) (Simon Owen).
20100222 make-perl.c: VC6 has __int64 instead of long long (Fred; thanks, Simon
         Owen).
20100526 tape_block.c: declare libspectrum_bits_set_n_bits static as it isn't
         used outside its file to silence a warning on LLVM 4.2 (Fred).
20100711 doc/libspectrum.txt: fix a typo in libspectrum_rzx_start_input (Fred).
20100825 libspectrum.c,libspectrum.h.in,sna.c,szx.c,timings.c,z80.c:
         reintegrate NTSC Spectrum branch.
20100831 szx.c: add SZX read support for NTSC Spectrum machine ID (Fred).
20100912 rzx.c: don't log error message when encountering an external snapshot
         (common in competition mode rzx files made by Spectaculator) (patch
         #3054536) (Sergio Baldovi).
20100912 Makefile.am,configure.in,windres.rc: add Windows version encoding
         similar to Fuse (patch #3061430) (Sergio Baldovi).
20100929 test/test.c,z80.c: ensure last OUT to 0x1ffd is serialised into .z80
         files (fixes bug #3078262; thanks, Nick Corey).
20100930 test/plus3.z80: remember to add test file.
20100930 ChangeLog,README: first updates for a "1.0" release.